Se agrega jwt, migrations y se aplica el uso de token en algunos endpoint
