# swagger/swagger.json
@@ -253,6 +253,12 @@
                 "operationId": "ProyectoController.Post",
                 "parameters": [
                     {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token",
+                        "type": "string"
+                    },
+                    {
                         "in": "body",
                         "name": "body",
                         "description": "body for Proyecto content",
@@ -308,6 +314,12 @@
                 "operationId": "ProyectoController.Put",
                 "parameters": [
                     {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token",
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
                         "name": "id",
                         "description": "The id you want to update",
@@ -343,6 +355,12 @@
                 "description": "delete the Proyecto",
                 "operationId": "ProyectoController.Delete",
                 "parameters": [
+                    {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token",
+                        "type": "string"
+                    },
                     {
                         "in": "path",
                         "name": "id",
@@ -707,12 +725,42 @@
                 }
             }
         },
+        "/token/": {
+            "post": {
+                "tags": [
+                    "token"
+                ],
+                "description": "Get token from user session",
+                "operationId": "TokenController.getToken",
+                "parameters": [
+                    {
+                        "in": "query",
+                        "name": "username",
+                        "description": "The username for get token",
+                        "required": true,
+                        "type": "string"
+                    },
+                    {
+                        "in": "query",
+                        "name": "password",
+                        "description": "The password for get token",
+                        "required": true,
+                        "type": "string"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{string} Obtain Token"
+                    }
+                }
+            }
+        },
         "/usuario/": {
             "get": {
                 "tags": [
                     "usuario"
                 ],
-                "description": "get Usuario",
+                "description": "Puede ver a los usuarios y su información, no requiere token, es para facilitar el uso de los usuarios",
                 "operationId": "UsuarioController.Get All",
                 "parameters": [
                     {
@@ -772,6 +820,12 @@
                 "operationId": "UsuarioController.Post",
                 "parameters": [
                     {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token",
+                        "type": "string"
+                    },
+                    {
                         "in": "body",
                         "name": "body",
                         "description": "body for Usuario content",
@@ -791,91 +845,80 @@
                 }
             }
         },
-        "/usuario/{id}": {
-            "get": {
-                "tags": [
-                    "usuario"
-                ],
-                "description": "get Usuario by id",
-                "operationId": "UsuarioController.Get One",
-                "parameters": [
-                    {
-                        "in": "path",
-                        "name": "id",
-                        "description": "The key for staticblock",
-                        "required": true,
-                        "type": "string"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Usuario"
-                        }
-                    },
-                    "403": {
-                        "description": ":id is empty"
-                    }
-                }
-            },
+        "/usuario/{password}/{passwordNew}": {
             "put": {
                 "tags": [
                     "usuario"
                 ],
-                "description": "update the Usuario",
-                "operationId": "UsuarioController.Put",
+                "description": "Permite cambiar la contraseña de un usuario un usuario",
+                "operationId": "UsuarioController.CambiarContrasena",
                 "parameters": [
                     {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token",
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
-                        "name": "id",
-                        "description": "The id you want to update",
+                        "name": "password",
+                        "description": "El nombre de usuario a cambiar",
                         "required": true,
                         "type": "string"
                     },
                     {
-                        "in": "body",
-                        "name": "body",
-                        "description": "body for Usuario content",
+                        "in": "path",
+                        "name": "passwordNew",
+                        "description": "El nombre de usuario a cambiar",
                         "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/models.Usuario"
-                        }
+                        "type": "string"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "",
-                        "schema": {
-                            "$ref": "#/definitions/models.Usuario"
-                        }
+                        "description": "Ok"
                     },
                     "403": {
                         "description": ":id is not int"
                     }
                 }
-            },
-            "delete": {
+            }
+        },
+        "/usuario/{username}/{activo}": {
+            "put": {
                 "tags": [
                     "usuario"
                 ],
-                "description": "delete the Usuario",
-                "operationId": "UsuarioController.Delete",
+                "description": "Deshabilitar Usuario permite habilitar o inhabilitar un usuario",
+                "operationId": "UsuarioController.DeshabilitarUsuario",
                 "parameters": [
                     {
+                        "in": "header",
+                        "name": "Authorization",
+                        "description": "Token",
+                        "type": "string"
+                    },
+                    {
                         "in": "path",
-                        "name": "id",
-                        "description": "The id you want to delete",
+                        "name": "username",
+                        "description": "El nombre de usuario a cambiar",
                         "required": true,
                         "type": "string"
+                    },
+                    {
+                        "in": "path",
+                        "name": "activo",
+                        "description": "true para habiliar y false para deshabilitar",
+                        "required": true,
+                        "type": "boolean"
                     }
                 ],
                 "responses": {
                     "200": {
-                        "description": "{string} delete success!"
+                        "description": "Ok"
                     },
                     "403": {
-                        "description": "id is empty"
+                        "description": ":id is not int"
                     }
                 }
             }
@@ -1006,6 +1049,10 @@
         {
             "name": "rol",
             "description": "RolController operations for Rol\n"
+        },
+        {
+            "name": "token",
+            "description": "EstadoController operations for Estado\n"
         },
         {
             "name": "usuario",
